# claudy

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  SECURITY.md  build.rs  dist-workspace.toml  dist.toml  install.ps1  install.sh  tauri.conf.json
.claude/skills/analytics-insights/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: config.md  demo_record.sh
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/assets/: demo.cast
docs/examples/: analytics-insights-sample.json
docs/i18n/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.ja.md  README.ko.md  README.pt-BR.md  README.zh-Hans.md  config.ko.md
examples/: test_dashboard.rs
icons/: icon.icns
scripts/: dist-upgrade.sh
src/: lib.rs  main.rs
src-tauri/capabilities/: default.json
src-tauri/permissions/: default.toml
src/adapters/: mod.rs
src/adapters/analytics/: mod.rs  schedule.rs  sqlite_store.rs
src/adapters/channel/: audit.rs  claude_process.rs  commands.rs  delivery.rs  idempotency.rs  mod.rs  pid.rs  response_analyzer.rs  retry.rs  service.rs  service_launchd.rs  service_systemd.rs  service_win.rs  session.rs  sessions.rs  state.rs  stream_handler.rs  webhook.rs
src/adapters/cli/: args.rs  help.rs  mod.rs  parse.rs
src/adapters/commands/: analytics_cmd.rs  channel_cmd.rs  dispatch.rs  info.rs  install.rs  list.rs  mcp_cmd.rs  mod.rs  mode_cmd.rs  session_cmd.rs  status.rs  test_cmd.rs  uninstall.rs  update_cmd.rs
src/adapters/mcp/: discovery.rs  mod.rs  runner.rs  server.rs
src/adapters/skill/: seeder.rs
src/adapters/ui/: output.rs  prompt.rs
src/adapters/update/: check.rs  install.rs  mod.rs  states.rs
src/application/: bootstrap.rs  channel_handler.rs  command_bus.rs  entrypoint.rs  launch_orchestrator.rs  mod.rs
src/config/: atomic.rs  layout.rs  mod.rs  registry.rs  vault.rs
src/domain/: agent.rs  analytics.rs  channel_events.rs  channel_session.rs  commands.rs  context.rs  launch_blueprint.rs  mod.rs
src/launcher/: adapter.rs  args.rs  binary.rs  env_schema.rs  envkit.rs  mod.rs  secret_adapter.rs  shim.rs
src/launcher/overlay/: mod.rs  pipeline.rs  stages.rs
src/ports/: analytics_ports.rs  channel_ports.rs  command_ports.rs  config_ports.rs  launch_ports.rs  mod.rs  provider_ports.rs  ui_ports.rs
src/providers/: capabilities.rs  catalog.json  index.rs  mod.rs  models.rs
src/routing/: adapter.rs  mod.rs  resolver.rs
stitch-screens/: claudy-dashboard.html  session-history.html  token-cost-analysis-1.html  token-cost-analysis-2.html  tool-inspector.html
tests/: differential.rs  overlay_stages.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.svelte  app.css
wix/: main.wxs
(+59 files in other folders)
