[package]
name = "claudy"
version = "0.3.3"
edition = "2024"
rust-version = "1.92"
description = "Modern multi-provider launcher for Claude CLI"
license = "Apache-2.0"
repository = "https://github.com/epicsagas/claudy"
homepage = "https://github.com/epicsagas/claudy"
authors = ["epicsagas"]
keywords = ["claude", "cli", "launcher", "ai", "multi-provider"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "ui/node_modules/",
    "ui/dist/",
    "stitch-screens/",
    "scripts/",
    "wix/",
    "docs/i18n/",
    "docs/assets/",
    "docs/demo_record.sh",
    "icons/",
    ".github/",
    ".claude/",
]

[[bin]]
name = "claudy"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.xz"
pkg-fmt = "txz"
bin-dir = "{ name }-{ target }/{ bin }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
bin-dir = "{ bin }.exe"

[package.metadata.wix]
upgrade-guid = "D995884F-247F-4EA1-B756-FD4B02F7CD4B"
path-guid = "4EE36F0E-4C9B-4D51-9765-57B8AB64706E"
license = false
eula = false

[features]
default = ["analytics-ui"]
analytics = ["rusqlite"]
analytics-ui = ["analytics", "tauri", "tauri-build"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
dialoguer = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
flate2 = "1"
tar = "0.4"
sha2 = "0.11"
hex = "0.4"
ureq = { version = "3", features = ["native-tls", "json"] }
dirs = "6"
which = "8"
tempfile = "3"
serial_test = "3.4.0"
libc = "0.2"

# Async runtime (bridge subcommand only)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "process", "io-util"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.13", features = ["json", "native-tls"], default-features = false }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.10"
uuid = { version = "1", features = ["v4"] }
serde_urlencoded = "0.7"
async-trait = "0.1"
bytes = "1.11.1"

# Analytics (feature-gated)
rusqlite = { version = "0.39", features = ["bundled"], optional = true }

# Tauri dashboard (feature-gated)
tauri = { version = "2", optional = true , features = [] }
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2", optional = true , features = [] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
